RESOLVED FIXED12564
REGRESSION: Uncaught AppKit exception when using the scrollwheel while Gmail is loading
https://bugs.webkit.org/show_bug.cgi?id=12564
Summary REGRESSION: Uncaught AppKit exception when using the scrollwheel while Gmail ...
mitz
Reported 2007-02-03 23:30:19 PST
2007-02-04 09:13:29.293 Safari[4104] *** Assertion failure in -[NSEvent eventNumber], AppKit.subproj/NSEvent.m:609 ASSERTION FAILED: Uncaught exception - Invalid message sent to event "NSEvent: type=ScrollWheel loc=(259,374) time=290983.8 flags=0x100 win=0x24c5a80 winNum=105999 ctxt=0x1afe7 deltaX=0.000000 deltaY=-6.500397 deltaZ=0.000000 deviceDeltaX=0.000000 deviceDeltaY=-65.000000 deviceDeltaZ=0.000000" Patch forthcoming.
Attachments
Scroll wheel events don't have an event number (1.14 KB, patch)
2007-02-03 23:33 PST, mitz
oliver: review+
mitz
Comment 1 2007-02-03 23:33:10 PST
Created attachment 12908 [details] Scroll wheel events don't have an event number
Oliver Hunt
Comment 2 2007-02-03 23:35:59 PST
Comment on attachment 12908 [details] Scroll wheel events don't have an event number Oops on my part :O
mitz
Comment 3 2007-02-03 23:48:42 PST
Note You need to log in before you can comment on or make changes to this bug.