2007-02-04  Mitz Pettel  <mitz@webkit.org>

Reviewed by Oliver.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12564
          REGRESSION: Uncaught AppKit exception when using the scrollwheel while Gmail is loading

        * platform/mac/PlatformMouseEventMac.mm:
        (WebCore::eventNumberForEvent): Scroll wheel events don't have an event number.


Canonical link: https://commits.webkit.org/16305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19392 268f45cc-cd09-0410-ab3c-d52691b4dbfc